[project]
name = "report-building-agent"
version = "0.1.0"
description = "AI-powered report generation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.6",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "openai>=2.8.0",
    "print-color>=0.4.6",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
