[project]
name = "report-building-agent"
version = "0.1.0"
description = "AI-powered report generation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.6",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "openai>=2.8.0",
    "print-color>=0.4.6",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    # black ha sido eliminado
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.4.0", # Actualizado a una versión moderna
]

# [tool.black] <-- Esta sección se elimina por completo

[tool.ruff]
# Configuración global de Ruff
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Reglas del Linter (las que ya tenías)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (ordenar imports)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# "ignore = ["E501"]" <-- Se elimina, ya que 'line-length = 88' lo maneja

[tool.ruff.format]
# NUEVA sección: Le dice a Ruff que formatee como Black
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
